add some more config checks, watch, debug

--- a/logfiles2syslog.conf
+++ b/logfiles2syslog.conf
@@ -3,3 +3,7 @@ includedir = /etc/logfiles2syslog.conf.d
 rewatch_interval = 100
 rewatch_interval_on_error = 10
 
+#[someconf]
+#watchdir = /tmp
+#watchpattern = .log
+
