--- a/logfiles2syslog.conf
+++ b/logfiles2syslog.conf
@@ -7,3 +7,6 @@ rewatch_interval_on_error = 10
 #watchdir = /tmp
 #watchpattern = .log
 
+#[someotherconf]
+#watchfile = /var/log/apache/access.log
+
